--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
         {% block scripts %}
             <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
             <script src="//oss.maxcdn.com/semantic-ui/2.0.8/semantic.min.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/rangy/1.3.0/rangy-core.min.js"></script>
         {% endblock scripts %}
     </body>
 </html>
